# Spellcaster

./: .env.example  .gitignore  LICENSE  README.md  grammar.py  output.txt  pyproject.toml  requirements.txt  spellcheck.py
data/: response.txt  sample1_corrected.mdx  sample2.mdx  sample2_corrected.mdx  sample3.mdx
spellcaster/: cli.py  config.py  github.py  grammar.py  traverse_repo.py
spellcaster/data/: response.txt  sample1.mdx  sample3_corrected.mdx  test.mdx
